refactor: remove API documentation and fix test compilation errors
- Remove knife4j/springdoc dependencies (incompatible with Spring Boot 4.x)
- Delete OpenApiYamlController, openapi.yaml, and all swagger configs
- Clean springdoc/knife4j blocks from application yaml files
- Remove @Tag/@Operation annotations from MockPaymentController
- Add NoResourceFoundException handler for static resource 404 responses
- Fix PasswordValidatorTest, UniqueFieldValidatorTest compilation errors
- Rewrite FavoriteControllerTest and FavoriteServiceTest for DDD layering
- Update README, architecture docs, AGENTS.md to remove stale API references
- Add jackson-datatype-jsr310 as compensating dependency